Refactoring from URL to URI
Refactor owner to use URIs instead of URLs throughout the code in preparation for being able to register custom Source Loaders