@@ -9,34 +9,42 @@
 package org.aeonbits.owner;
 
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 
 /**
  * @author Luigi R. Viggiano
  */
-class ConfigURLFactory {
+class ConfigURIFactory {
 
     private static final String CLASSPATH_PROTOCOL = "classpath:";
+    private static final String FILE_PROTOCOL = "file:";
     private final transient ClassLoader classLoader;
     private final VariablesExpander expander;
 
-    ConfigURLFactory(ClassLoader classLoader, VariablesExpander expander) {
+    ConfigURIFactory(ClassLoader classLoader, VariablesExpander expander) {
         this.classLoader = classLoader;
         this.expander = expander;
     }
 
-    URL newURL(String spec) throws MalformedURLException {
+    URI newURI(String spec) throws MalformedURLException, URISyntaxException {
         String expanded = expand(spec);
-        URL url;
+        URI uri;
         if (expanded.startsWith(CLASSPATH_PROTOCOL)) {
             String path = expanded.substring(CLASSPATH_PROTOCOL.length());
-            url = classLoader.getResource(path);
+            URL url = classLoader.getResource(path);
             if (url == null)
                 return null;
+            uri = url.toURI();
+        } else if(expanded.startsWith(FILE_PROTOCOL)) {
+        	URL url = new URL(expanded);
+        	uri = url.toURI();
         } else {
-            url = new URL(expanded);
+            uri = new URI(expanded);
         }
-        return new URL(url.getProtocol(), url.getHost(), url.getPort(), expand(url.getPath()));
+        
+        return uri;
     }
 
     private String expand(String path) {
